Fixed minor modal layout issue

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -683,6 +683,7 @@ a.bit-btn {
 .smart-modal--head {
     background: #d9d9d9;
     padding: 5px;
+    text-align: right;
 }
 
 .smart-modal--close {
@@ -697,7 +698,8 @@ a.bit-btn {
 
 .smart-modal--title {
     font-size: 35px;
-    margin: 25px 0;
+    margin: 5px 0;
+    text-align: center;
 }
 
 @media screen and (max-width: 820px) {
